--- a/project1.css
+++ b/project1.css
@@ -316,23 +316,22 @@ a{
 }
 .main-content::-webkit-scrollbar {
   width: 12px;
-  /* Set the width of the scrollbar */
+ 
   /* background-color: rgba(51, 51, 51, 0.7); */
 }
 
-/* Handle */
+
 .main-content::-webkit-scrollbar-thumb {
   background-color: #333;
 }
 
-/* Handle on hover */
 .main-content::-webkit-scrollbar-thumb:hover {
   /* background-color: #555; */
 }
 
-/* Track */
+
 .main-content::-webkit-scrollbar-track {
-  /* background-color: #232323; Set the background color for the track */
+  /* background-color: #232323;  */
 }
 
   
